[build-system]
requires = ["setuptools>=69.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "entmix-tabred-runner"
version = "0.1.0"
description = "External TabReD runner for baseline and NCTTA+EntMix experiments."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["entmix*"]
